--- a/package.json
+++ b/package.json
@@ -9,7 +9,17 @@
   "author": "Beyar Alhaji",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "pg": "^8.8.0",
     "pg-format": "^1.0.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.10",
+    "@types/pg": "^8.6.5",
+    "@types/pg-format": "^1.0.2",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   }
 }
