--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Beyar Alhaji",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^29.2.4",
     "dotenv": "^16.0.3",
     "pg": "^8.8.0",
     "pg-format": "^1.0.4"
@@ -19,7 +20,11 @@
     "@types/node": "^18.11.10",
     "@types/pg": "^8.6.5",
     "@types/pg-format": "^1.0.2",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
+    "supertest": "^6.3.2",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   }
