--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/jest": "^29.2.4",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "pg": "^8.8.0",
     "pg-format": "^1.0.4"
   },
