--- a/tsconfig.json
+++ b/tsconfig.json
@@ -99,5 +99,12 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+  },
+  "exclude":[
+    "rollup.config.js",
+    "test",
+    "__test__",
+    "dist",
+    "node_modules",
+  ],
 }
