--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "real estate api/backend",
   "main": "app.js",
   "scripts": {
+    "start":"node dist/listen.js",
+    "build": "tsc",
     "test": "jest",
-    "seed": "tsc && node dist/db-seeding/run-seed.js"
+    "seed": "tsc && node dist/db-seeding/run-seed.js",
+    "dev": "nodemon src/listen.ts"
   },
   "author": "Beyar Alhaji",
   "license": "ISC",
@@ -14,7 +17,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.8.0",
-    "pg-format": "^1.0.4"
+    "pg-format": "^1.0.4",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
@@ -26,7 +30,6 @@
     "nodemon": "^2.0.20",
     "supertest": "^6.3.2",
     "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   }
 }
