--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.8.0",
-    "pg-format": "^1.0.4",
-    "ts-node": "^10.9.1"
+    "pg-format": "^1.0.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
@@ -28,6 +27,7 @@
     "@types/supertest": "^2.0.12",
     "jest": "^29.3.1",
     "nodemon": "^2.0.20",
+    "prettier": "2.8.1",
     "supertest": "^6.3.2",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.3"
